# agent-harness

./: .gitignore  .ls-lint.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  deny.toml  flake.nix  lefthook.yml  pyproject.toml  release-please-config.json  renovate.json  vulture_allowlist.py
.github/workflows/: ci.yml  codeql.yml  dependency_review.yml  gha_lint.yml  release_please.yml
agents/: command_policy.json  hooks.json  secret_path_policy.json  skill_rendering.json
agents/hooks/: guard_allowed_commands.sh  guard_dangerous_git.sh  guard_forbidden_commands.sh  guard_harness_files.sh
agents/hooks/rules/: related_test_extensions.json
agents/skills/adr/: SKILL.md
agents/skills/git-commit-split/: SKILL.md
agents/skills/git-commit-split/references/: direct_execute.md  hunk_split.md  pr_per_feature_execute.md
agents/skills/git-commit-split/scripts/: branch_name.py
agents/skills/git-workflow/: SKILL.md
agents/skills/rust-style/: SKILL.md
agents/skills/skill-auditor/scripts/: apply_patches.py  collect_skills.py
claude/: settings.base.json
codex/: config.toml
codex/hooks/: adapt_guard_secret_paths.sh  adapt_lint_format.sh
nix/: home_manager_module.nix
scripts/: install.sh
src/: claude_config.rs  cli.rs  codex_config.rs  command_policy.rs  fs_ops.rs  generation.rs  hooks.rs  lib.rs  main.rs  protection.rs  render.rs  skills.rs  source.rs
src/generation/: claude_config.rs  codex_config.rs  command_policy.rs  hooks.rs  io.rs  protection.rs  secret_path_policy.rs  skills.rs
tests/: generated_artifacts.rs  install_script.bats  json_syntax.rs  release_distribution.rs
tests/codex/: execpolicy.bats
tests/hooks/claude/: command_policy_sync.bats  guard_allowed_commands.bats  guard_dangerous_git.bats  guard_harness_files.bats  related_test_rules.bats
tests/hooks/codex/: adapt_guard_secret_paths.bats  adapt_harness_files.bats  adapt_lint_format.bats
tests/hooks/config/: agent_skills_render.bats  claude_generated_settings.bats  claude_settings_sync.bats  codex_config_sync.bats  codex_execpolicy.bats  codex_generated_settings.bats  codex_hooks_sync.bats  codex_rules_sync.bats
tests/python/skills/skill-auditor/: test_apply_patches.py
