[package]
name = "agent-harness"
version = "0.2.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "=1.0.102"
clap = { version = "=4.6.1", features = ["derive"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
toml_edit = "=0.25.11+spec-1.1.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
