[package]
name = "agent-harness"
version = "0.2.0"
edition = "2024"
homepage = "https://github.com/furedea/agent-harness"
license = "MIT"
readme = "README.md"
repository = "https://github.com/furedea/agent-harness"
description = "Shared AI agent harness installer for Codex and Claude Code"

[dependencies]
anyhow = "=1.0.102"
clap = { version = "=4.6.1", features = ["derive"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
toml_edit = "=0.25.11+spec-1.1.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.2"
# CI backends to support
ci = "github"
# This repository keeps a custom Release Please workflow and uses dist only for
# artifact and installer generation inside that workflow.
allow-dirty = ["ci"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-musl"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
